# rust_the_hardway

./: .gitignore  rust_config.lua
.stfolder/: syncthing-folder-745931.txt
ahow_tuto/: Cargo.toml
candle1/: Cargo.toml  models.safetensors
candle1/src/: main.rs
clap-tuto/: Cargo.toml
constructs/: Cargo.toml
conversions/: Cargo.toml  tutorial_conversions.md
d_sci/: Cargo.toml  invalid.csv  mess.csv  test.csv
data_vis/: Cargo.toml
diesel-demo/: Cargo.toml
error_handling_divein/: Cargo.toml  and_then_usage.md  error_handling_notes.md  example_20_error_handling.md
error_handling_divein/andthen/: Cargo.toml
error_handling_divein/andthen/src/: main.rs
error_handling_divein/error_advs/: Cargo.toml
error_handling_divein/error_basics/: Cargo.toml
error_handling_divein/error_basics/src/: lib.rs  main.rs  prac.rs  refactored.rs
error_handling_divein/error_basics/src/folder/: mod.rs
error_handling_divein/error_divein/: Cargo.toml
error_handling_divein/error_divein/src/: inmod.rs  main.rs  prac_inmod0.rs
error_handling_divein/prac01/: Cargo.toml
error_handling_divein/prac01/src/: main.rs
error_handling_divein/prac02/: Cargo.toml
error_handling_divein/prac02/src/: main.rs
error_handling_divein/prac03/: Cargo.toml
error_handling_divein/prac03/src/: main.rs
error_handling_divein/prac04/: Cargo.toml
error_handling_divein/prac04/src/: main.rs
error_handling_divein/prac05/: Cargo.toml
error_handling_divein/prac05/src/: main.rs
exercises_57_rust/: Cargo.toml  emp_list.txt  index.html  out_names.txt  product_data.json  used.txt
file-io/: Cargo.toml  new_file.txt  warm_write01.txt  warm_write_direct01.txt  write_direct.txt
func_tuto/: Cargo.toml
html_css_tauri/: pjt_notes.txt
idiomatic_rust/: Cargo.toml  idiomatic_way.md
income_taxer/: Cargo.toml
iterators/: Cargo.toml  tutorial_iterators.md
jcapp/: package-lock.json  package.json
lgr_ws/: Cargo.toml
lgr_ws/ai_practice/: Cargo.toml
lgr_ws/ai_practice/src/: main.rs
lgr_ws/closures/: closures_fn.md
lgr_ws/closures/src/: main.rs
lgr_ws/collections/: Cargo.toml
lgr_ws/csv_read/: Cargo.toml  csv_file.csv
lgr_ws/csv_read/src/: main.rs
lgr_ws/deriver/: Cargo.toml
lgr_ws/deriver/src/: lib.rs
lgr_ws/enumin/: Cargo.toml
lgr_ws/enumin/src/: main.rs
lgr_ws/generico/: Cargo.toml
lgr_ws/generico/src/: main.rs
lgr_ws/grpc_explore/: Cargo.toml  build.rs
lgr_ws/grpc_explore/proto/: payments.proto
lgr_ws/grpc_explore/src/: client.rs  server.rs
lgr_ws/guesser/: Cargo.toml
lgr_ws/guesser/src/: main.rs
lgr_ws/handlin_error/: Cargo.toml
lgr_ws/handlin_error/src/: main.rs
lgr_ws/hello_macro_derive/: Cargo.toml
lgr_ws/hello_macro_derive/src/: lib.rs
lgr_ws/listerator/: Cargo.toml
lgr_ws/listerator/src/: main.rs
lgr_ws/ooping/: Cargo.toml
lgr_ws/ooping/src/: main.rs
lgr_ws/owningrs/: Cargo.toml
lgr_ws/owningrs/src/: main.rs  owner_ops.rs
lgr_ws/pkg/: Cargo.toml
lgr_ws/restaurant/: Cargo.toml
lgr_ws/restaurant/src/: lib.rs
lgr_ws/rocket-chat/: Cargo.toml
lgr_ws/rocket-chat/src/: main.rs
lgr_ws/serde_use/: Cargo.toml
lgr_ws/serde_use/src/: main.rs
lgr_ws/structs/src/: main.rs
lgr_ws/testit/: Cargo.toml
lgr_ws/testit/src/: funced.rs  main.rs
lgr_ws/testit/tests/: integ_test.rs
lgr_ws/toki-verse/: Cargo.toml  csv_file.csv
lgr_ws/toki-verse/src/: main.rs
lgr_ws/traito/: Cargo.toml
lgr_ws/traito/src/: main.rs
lgr_ws/web_reqs/: Cargo.toml
lgr_ws/web_reqs/src/: main.rs
lifetime/: Cargo.toml  example.txt
matchdive/: match_inandout.md
mingrep/: Cargo.toml  test_data.txt
ptrdojo/: Cargo.toml  realworld_usecase.md
req_work/: Cargo.toml
rust-auxm/: Cargo.toml
rust-auxm/src/: main.rs
rust-data-analysis/: 1-iris-data-analysis-rust.ipynb  4-polars-tutorial-part-2.ipynb  7-reqwest_serdejson.ipynb  driving_plotter_on_jupyter.ipynb  evcxr_jupyter_tour.ipynb
rust-io/: Cargo.toml
rust_ws/: Cargo.toml
rust_ws/app01/: Cargo.toml
rust_ws/app01/src/: main.rs
rust_ws/lib01/: Cargo.toml
rust_ws/lib01/src/: lib.rs  modadd.rs
rust_ws/lib02/: Cargo.toml
rust_ws/lib04/: Cargo.toml
(+187 files in other folders)
