[package]
name = "candle1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.1", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.1" }
hf-hub = "0.3.2"
serde = "1.0.209"
serde_json = "1.0.127"
tokenizers = "0.20.0"
