[workspace]
members = [ "error_advs",
  "error_basics"
]

resolver = "2"

[workspace.package]
version = "0.6.5"
edition = "2022"
description = "Error Handling Warmup"
repository = "https://github.com/kamalabot/rust_the_hardway"



[workspace.dependencies]
anyhow = "1.0.86"
serde_json = "1.0.127"

[profile.release-with-debug]
inherits = "release"
debug = true

