[workspace]

members = [ "ai_practice", "closures", "collections", "csv_read", "enumin", "generico", "grpc_explore",
    "guesser", "handlin_error",
    "listerator", "ooping", "owningrs", "pkg", "restaurant", "rocket-chat", "serde_use", "structs", "testit", "toki-verse", "traito", "web_reqs",
]
resolver = "2"
