[package]
name = "rust-auxm"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }

sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros"]}

serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.122"

dotenvy = "0.15.7"
