[package]
name = "grpc_explore"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "payments-server"
path = "src/server.rs"

[[bin]]
name = "payment-client"
path = "src/client.rs"

[dependencies]
prost = "0.13.1"
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.1"

[build-dependencies]
tonic-build = "0.12.1"
